# proxy-health-monitor

./: Cargo.toml  Readme.md  config.toml.example
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  mihomo_api.rs  model.rs  prometheus_exporter.rs  scheduler.rs
